# padim

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LEGAL_STRUCTURE.md  LICENSE  LICENSE-ODbL.md  MAGNET_LINK.txt  MANIFIESTO.md  NOTICE.md  README.md  SECURITY.md  TWEET-LANZAMIENTO.md  caddy-fragment-clean.txt  caddy-fragment.txt  config.yaml  padim_data.json  pyproject.toml  requirements.txt  run_scraper.sh  scraper_padim.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
cli/: LICENSE  main.py  scraper_manager.py
docs/: DATASET_PIPELINE.md
engine/: LICENSE  data_quality.py  trust_engine.py
padim/cli/: main.py
padim/engine/: data_quality.py  trust_engine.py
padim/scrapers/: __init__.py  scraper_padim.py
padim/spec/: schema.json
scripts/: consolidate_to_jsonl.py  export_db_to_jsonl.py  update_metrics.py  update_status.py
site/: aviso-legal.html  colaborar.html  index.html  index.html.bak  robots.txt  sitemap.xml  status.json  terminos.html
spec/: LICENSE  schema.json
tests/: test_core.py
