[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "padim"
version = "2.0.0"
description = "Protocolo Abierto de Datos Inmobiliarios de México"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "PADIM Contributors"},
]
dependencies = [
    "httpx>=0.27",
    "jsonschema>=4.20",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pyyaml>=6.0",
]

[project.urls]
Home = "https://PADIM.enmexico.casa"
Source = "https://github.com/PADIM-MX/padim"
BACKBONE = "https://back-bone.dev"

[project.scripts]
padim = "padim.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["padim*"]
